# gPb

./: .gitignore  README
grouping/: compile.m  example.m  fasttest.m  run_bsds500.m
grouping/data/: 101087_ucm2.mat
grouping/interactive/: LICENSE  example_interactive.m  interactive_segmentation.m
grouping/lib/: buildW.mexa64  buildW.mexmaci64  contours2ucm.m  det_mPb.m  det_mPb_lg.m  det_mPb_sm.m  fit_contour.m  gPb_from_cues.m  globalPb.m  globalPb_im.m  globalPb_im_multiscale.m  im2ucm.m  load_smatrix.mexa64  load_smatrix.mexmaci64  mPb_from_cues.m  mex_contour_sides.mexa64  mex_contour_sides.mexmaci64  mex_line_inds.mexa64  mex_nonmax_oriented.mexa64  mex_nonmax_oriented.mexmaci64  mex_pb_parts_final_selected.mexa64  mex_pb_parts_final_selected.mexmaci64  mex_pb_parts_lg.mexa64  mex_pb_parts_lg.mexmaci64  mex_pb_parts_sm.mexa64  mex_pb_parts_sm.mexmaci64  multiscalePb.m  nonmax_channels.m  nonmax_oriented.m  savgol_border.mexa64  savgol_border.mexmaci64  spectralPb.m  ucm_mean_pb.mexa64  ucm_mean_pb.mexmaci64  uvt.mexa64
grouping/source/: CMakeLists.txt  build.sh
grouping/source/buildW/: Makefile  buildW.cpp  ic.cc  ic.hh  smatrix.cc  smatrix.hh
grouping/source/buildW/util/: array.hh  kmeans.cc
grouping/source/gpb_src/: Makefile  Rules.make
grouping/source/gpb_src/matlab/: Makefile
grouping/source/gpb_src/matlab/segmentation/: mex_contour_sides.cc  mex_line_inds.cc  mex_pb_parts_final_selected.cc
grouping/source/gpb_src/scripts/doc/: doxygen_comments.py
grouping/source/gpb_src/src/concurrent/threads/: thread.cc
grouping/source/gpb_src/src/math/geometry/: seg_intersect.cc  triangulation.cc
grouping/source/gpb_src/src/math/libraries/: lib_image.cc
grouping/source/gpb_src/test/: Makefile
grouping/source/opencv_gpb/mex/: MxArray.cpp  watershed.cpp
grouping/source/opencv_gpb/src/: CMakeLists.txt  det_gpb.cpp  failed_textons.cpp  filters  textons.cpp  watershed.cpp  watershed.h
